--- a/client/package.json
+++ b/client/package.json
@@ -46,9 +46,15 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.12",
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.12"
+    "tailwindcss": "^3.4.17"
+  },
+  "overrides": {
+    "react-scripts": {
+      "tailwindcss": "^4.1.12"
+    }
   }
 }
